Prevent horizontal scrolling due to long links

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,7 @@ html {
 a {
   cursor: pointer;
   color: $maroon;
+  word-wrap: break-word;
 }
 
 h1,
